--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="bootstrap-3.4.1/css/bootstrap.css" />
   <title>About</title>
 </head>
@@ -34,8 +34,10 @@
       </div><!--/.container-fluid -->
     </nav>
 
-    <h3>A place to experiment with all the bullish things.</h3>
-    <p>v0.0.04</p>
+    <div class="jumbotron">
+        <p>A place to experiment with all the BULLISH things.</p>
+        <small>v0.0.5</small>
+    </div>
 
   </div> <!-- /container -->
 
