--- a/pay.html
+++ b/pay.html
@@ -38,7 +38,7 @@
         <div class="jumbotron">
 
             <h1>BullishPay</h1>
-            <button type="button" class="btn btn-primary" id="paste-button">Paste</button> BOLT11 invoice below <br><br>
+            <button type="button" class="btn btn-primary" id="paste-button" onclick="pasteButtonClicked()">Paste</button> BOLT11 invoice below <br><br>
 
             <textarea id="invoice" style="width: 100%" rows="5"></textarea>
             <br><br>
@@ -48,7 +48,7 @@
             </script>
 
             <bc-pay-button onclick="payButtonClicked()"></bc-pay-button>
-            
+
         </div>
 
     </div> <!-- /container -->
@@ -63,23 +63,33 @@
 
     <script>
 
-        const pasteButton = document.querySelector('#paste-button');
+        // const pasteButton = document.querySelector('#paste-button');
 
-        pasteButton.addEventListener('click', async () => {
-        try {
-            const text = await navigator.clipboard.readText()
-            document.querySelector('textarea').value += text;
-            console.log('Text pasted.');
-        } catch (error) {
-            console.log('Failed to read clipboard');
-        }
-        });
+        // pasteButton.addEventListener('click', async () => {
+        // try {
+        //     const text = await navigator.clipboard.readText()
+        //     document.querySelector('textarea').value += text;
+        //     console.log('Text pasted.');
+        // } catch (error) {
+        //     console.log('Failed to read clipboard');
+        // }
+        // });
 
         function payButtonClicked(){
             var invoice = document.getElementById("invoice").value;
             const button = document.querySelector("bc-pay-button");
             button.setAttribute("invoice", invoice);
         }
+
+        function pasteButtonClicked() {
+      navigator.clipboard.readText()
+        .then(text => {
+          document.getElementById('invoice').value = text;
+        })
+        .catch(err => {
+          console.error('Failed to read clipboard contents: ', err);
+        });
+    }
 
     </script>
 
