--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <title>Bullish Prototype</title>
   <meta name="description" content="A place to experiment with all the bullish things." />
   <meta name="color-scheme" content="light dark">
+
+  <style>
+    html {
+        --bc-color-brand: #ff9900; /* Only 6-digit hex and rgb formats are supported! */
+    }
+  </style>
+
 </head>
 
 <body>
@@ -29,6 +36,8 @@
         </div>
     </nav>
 
+    <br>
+
     <h4>Bitcoin Connect</h4>
     <p>Connecting lightning wallets to your webapp has never been easier. Enable WebLN in all browsers with a single
       button.</p>
@@ -45,6 +54,8 @@
 
     <!-- Bitcoin Connect components are now available -->
     <bc-button></bc-button>
+
+    <br>
 
     <h4>Twenty Uno Payment Widgets</h4>
     <p>Payment Widgets aims to be the easiest way to integrate bitcoin payments into your website.</p>
