--- a/public/bitcoin-qr.html
+++ b/public/bitcoin-qr.html
@@ -75,7 +75,7 @@
         <div class="flex flex-col items-center">
 
             <bitcoin-qr id="qr" width="360" height="360" lightning="lnbc..." is-polling="false" poll-interval="3000"
-                image="./images/thebullishbitcoiner-1.0.png" type="svg" corners-square-color="#000"
+                image="./images/thebullishbitcoiner.png" image-hide-background-dots="false" type="svg" corners-square-color="#000"
                 corners-dot-color="#ff9900" corners-square-type="square" dots-type="square" dots-color="#000"
                 debug="true" />
 
